pagination mobile display fix

--- a/app/assets/stylesheets/_pagination.scss
+++ b/app/assets/stylesheets/_pagination.scss
@@ -1,72 +1,20 @@
 @import "global";
 
-.digg_pagination {
-  background: white;
-  cursor: default;
-  /* self-clearing method: */
+.pagination {
+  display: -ms-flexbox;
+  flex-wrap: wrap;
+  display: flex;
 }
 
-.digg_pagination a,
-.digg_pagination span,
-.digg_pagination em {
-  padding: 0.2em 0.5em;
-  display: block;
-  float: left;
-  margin-right: 1px;
-}
-
-.digg_pagination .disabled {
-  color: #999999;
-  border: 1px solid #dddddd;
-}
-
-.digg_pagination .current {
-  font-style: normal;
-  font-weight: bold;
-  background: $orange;
+.pagination .page-item.active .page-link {
+	font-style: normal;
+	background: $orange;
   color: white;
-  border: 1px solid $red;
+  border: 1px solid #dee2e6;
 }
 
-.digg_pagination a {
-  text-decoration: none;
-  color: $orange;
-  border: 1px solid $orange;
-}
-
-.digg_pagination a:hover,
-.digg_pagination a:focus {
-  color: $red;
-  border-color: $red;
-}
-
-.digg_pagination .page_info {
-  background: white;
-  color: $grey;
-  padding: 0.4em 0.6em;
-  width: 22em;
-  margin-bottom: 0.3em;
-  text-align: center;
-}
-
-.digg_pagination .page_info b {
-  color: #000033;
-  background: white;
-  padding: 0.1em 0.25em;
-}
-
-.digg_pagination:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-* html .digg_pagination {
-  height: 1%;
-}
-
-*:first-child + html .digg_pagination {
-  overflow: hidden;
+.pagination a:hover,
+.pagination a:focus {
+	color: $red;
+	border-color: $red;
 }
